--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mysqlDatabase?createDatabaseIf
 spring.datasource.username=timeflow
 spring.datasource.password=12345678
 spring.jpa.show-sql: true
-
+#spring.jpa.hibernate.ddl-auto=create
