--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=timeflow
 spring.datasource.password=12345678
 spring.jpa.show-sql: true
 #spring.jpa.hibernate.ddl-auto=create
+spring.security.user.name = user
+spring.security.user.password = 12345
