--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 	</parent>
 
 	<groupId>com.completeTimeFlow</groupId>
-	<artifactId>timeFlowArtifact</artifactId>
+	<artifactId>timeFlow</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Core</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Core application in Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
