--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<groupId>com.completeTimeFlow</groupId>
 	<artifactId>timeFlow</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Core</name>
-	<description>Core application in Spring Boot</description>
+	<name>Security</name>
+	<description>Security application in Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
